--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,11 @@ main {
 footer {
   background-color: #52A596;
   padding: 5px;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-top: 15%;
 }
 
 footer ul {
