--- a/src/App.css
+++ b/src/App.css
@@ -154,7 +154,7 @@ main {
 footer {
   background-color: #52A596;
   padding: 5px;
-  position: relative;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
