json build scripts updated, set loading default sizes

--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,12 @@ h4 {
   text-align: left;
 
 }
+
+.nasa-apod {
+  width: 200px;
+  height: 100px;
+}
+
 .APOD-description {
   margin: 1em 0;
   line-height: 1.5;
